fixed the external links on mobileim so sleepy

--- a/pages/styles.module.scss
+++ b/pages/styles.module.scss
@@ -5,29 +5,26 @@
 .icon {
 	width: 2em;
 	height: 2em;
-
-	position: absolute;
-	left: 10px;
 }
 
 .externalLink {
 	margin: 4px;
-	padding-left: 48px;
-	padding-right: 48px;
+	padding: 10px;
 	position: relative;
 	display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.bigExternalLink {
-	padding-top: 2em;
-	padding-bottom: 2em;
+.externalLinkLabel {
+	flex-grow: 1;
+	padding-left: 10px;
+	padding-right: 2em;
+}
 
-	.icon {
-		width: 4em;
-		height: 4em;
-	}
+.bigExternalLink .icon {
+	width: 3em;
+	height: 3em;
 }
 
 .externalLinks {
